--- a/latex/main.tex
+++ b/latex/main.tex
@@ -21,35 +21,32 @@
 %
 \begin{document}
 %
-\title{Contribution Title}
+\title{Enhancing Medical Object Detection through GAN-generated CT Images}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-\author{First Author\inst{1}\orcidID{0000-1111-2222-3333} \and
-Second Author\inst{2,3}\orcidID{1111-2222-3333-4444} \and
-Third Author\inst{3}\orcidID{2222--3333-4444-5555}}
+\author{Tobias Nguyen\inst{1} \and
+Cumali Karaali\inst{2}}
 %
 \authorrunning{F. Author et al.}
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
 %
-\institute{Princeton University, Princeton NJ 08544, USA \and
-Springer Heidelberg, Tiergartenstr. 17, 69121 Heidelberg, Germany
-\email{lncs@springer.com}\\
-\url{http://www.springer.com/gp/computer-science/lncs} \and
-ABC Institute, Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
-\email{\{abc,lncs\}@uni-heidelberg.de}}
+\institute{Aalen University, Beethovenstr. 1, 73430 Aalen \\
+\email{88299@studmail.htw-aalen.de} \and
+Aalen University, Beethovenstr. 1, 73430 Aalen \\
+\email{88154@studmail.htw-aalen.de}}
 %
 \maketitle              % typeset the header of the contribution
 %
-\begin{abstract}
-The abstract should briefly summarize the contents of the paper in
-150--250 words.
+% \begin{abstract}
+% The abstract should briefly summarize the contents of the paper in
+% 150--250 words.
 
-\keywords{First keyword  \and Second keyword \and Another keyword.}
-\end{abstract}
+% \keywords{First keyword  \and Second keyword \and Another keyword.}
+% \end{abstract}
 %
 %
 %
