--- a/latex/main.tex
+++ b/latex/main.tex
@@ -52,18 +52,22 @@ Aalen University, Beethovenstr. 1, 73430 Aalen \\
 %
 % ------------------------------------------------------------
 \section{Introduction} % Cumi
-\subsection{Novelty} % Cumi
-\subsection{Expected Contributions} % Cumi
-\subsection{Research Gap} % Tobi
-\subsection{Research Questions} % Tobi
-\subsection{Methodology} % Tobi
-\subsection{Expected Contributions} % Cumi
+\subsection{Novelty \& Expected Contributions} % Cumi
+\subsection{Research Gap \& Questions} % Tobi
 % ------------------------------------------------------------
 \section{Related Work}
-\subsection{Generative Adversarial Networks in Medical Imaging} % Tobi
+\subsection{GANs in Medical Imaging} % Tobi
 \subsection{Object Detection in Medical Imaging} % Tobi
 \subsection{Positioning of this Work} % Tobi
-\subsection{Expected Results} % Cumi
+% ------------------------------------------------------------
+\section{Methodology} % Tobi
+\subsection{Dataset description} % Tobi
+\subsection{GAN Model} % Tobi
+\subsection{Object Detection Model} % Tobi
+\subsection{Training Procedure} % Tobi
+\subsection{Evaluation Metrics} % Tobi
+% ------------------------------------------------------------
+\section{Expected Results} % Cumi
 %
 % ---- Bibliography ----
 %
