--- a/latex/main.tex
+++ b/latex/main.tex
@@ -61,6 +61,8 @@ Aalen University, Beethovenstr. 1, 73430 Aalen \\
 \subsection{Positioning of this Work} % Tobi
 % ------------------------------------------------------------
 \section{Methodology} % Tobi
+As shown by Goodfellow et al.~\cite{goodfellow2014gan}, GANs can generate realistic images.
+
 \subsection{Dataset description} % Tobi
 \subsection{GAN Model} % Tobi
 \subsection{Object Detection Model} % Tobi
@@ -74,27 +76,6 @@ Aalen University, Beethovenstr. 1, 73430 Aalen \\
 % BibTeX users should specify bibliography style 'splncs04'.
 % References will then be sorted and formatted in the correct style.
 %
-% \bibliographystyle{splncs04}
-% \bibliography{mybibliography}
-%
-\begin{thebibliography}{8}
-\bibitem{ref_article1}
-Author, F.: Article title. Journal \textbf{2}(5), 99--110 (2016)
-
-\bibitem{ref_lncs1}
-Author, F., Author, S.: Title of a proceedings paper. In: Editor,
-F., Editor, S. (eds.) CONFERENCE 2016, LNCS, vol. 9999, pp. 1--13.
-Springer, Heidelberg (2016). \doi{10.10007/1234567890}
-
-\bibitem{ref_book1}
-Author, F., Author, S., Author, T.: Book title. 2nd edn. Publisher,
-Location (1999)
-
-\bibitem{ref_proc1}
-Author, A.-B.: Contribution title. In: 9th International Proceedings
-on Proceedings, pp. 1--2. Publisher, Location (2010)
-
-\bibitem{ref_url1}
-LNCS Homepage, \url{http://www.springer.com/lncs}, last accessed 2023/10/25
-\end{thebibliography}
+\bibliographystyle{splncs04}
+\bibliography{references}
 \end{document}
