Added 'Methodology' section

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,7 +1,106 @@
-@article{goodfellow2014gan,
-  author    = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
-  title     = {Generative Adversarial Nets},
-  journal   = {Advances in Neural Information Processing Systems},
-  volume    = {27},
-  year      = {2014}
+@inproceedings{gan,
+ author = {Goodfellow, Ian J. and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {Z. Ghahramani and M. Welling and C. Cortes and N. Lawrence and K.Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Generative Adversarial Nets},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2014/file/f033ed80deb0234979a61f95710dbe25-Paper.pdf},
+ volume = {27},
+ year = {2014}
 }
+
+@article{frid2018gan,
+  title={GAN-based synthetic medical image augmentation for increased CNN performance in liver lesion classification},
+  author={Frid-Adar, Maayan and Diamant, Idit and Klang, Eyal and Amitai, Michal and Goldberger, Jacob and Greenspan, Hayit},
+  journal={Neurocomputing},
+  volume={321},
+  pages={321--331},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{singh2021medical,
+  title={Medical image generation using generative adversarial networks: A review},
+  author={Singh, Nripendra Kumar and Raza, Khalid},
+  journal={Health informatics: A computational perspective in healthcare},
+  pages={77--96},
+  year={2021},
+  publisher={Springer}
+}
+
+@INPROCEEDINGS{cycleganeaugmentation,
+  author={Hammami, Maryam and Friboulet, Denis and Kechichian, Razmig},
+  booktitle={2020 IEEE International Conference on Image Processing (ICIP)}, 
+  title={Cycle GAN-Based Data Augmentation For Multi-Organ Detection In CT Images Via Yolo}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={390-393},
+  keywords={Computed tomography;Three-dimensional displays;Magnetic resonance imaging;Detectors;Biomedical imaging;Two dimensional displays;Image generation;multi-organ detection;image synthesis;data augmentation;medical imaging},
+  doi={10.1109/ICIP40778.2020.9191127}}
+
+@article{sandfort2019data,
+  title={Data augmentation using generative adversarial networks (CycleGAN) to improve generalizability in CT segmentation tasks},
+  author={Sandfort, Veit and Yan, Ke and Pickhardt, Perry J and Summers, Ronald M},
+  journal={Scientific reports},
+  volume={9},
+  number={1},
+  pages={16884},
+  year={2019},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{luna16,
+  title={Validation, comparison, and combination of algorithms for automatic detection of pulmonary nodules in computed tomography images: the LUNA16 challenge},
+  author={Setio, Arnaud Arindra Adiyoso and Traverso, Alberto and De Bel, Thomas and Berens, Moira SN and Van Den Bogaard, Cas and Cerello, Piergiorgio and Chen, Hao and Dou, Qi and Fantacci, Maria Evelina and Geurts, Bram and others},
+  journal={Medical image analysis},
+  volume={42},
+  pages={1--13},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@misc{zhu2020unpairedimagetoimagetranslationusing,
+      title={Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks}, 
+      author={Jun-Yan Zhu and Taesung Park and Phillip Isola and Alexei A. Efros},
+      year={2020},
+      eprint={1703.10593},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1703.10593}, 
+}
+
+@ARTICLE{yoloreview,
+  author={Ragab, Mohammed Gamal and Abdulkadir, Said Jadid and Muneer, Amgad and Alqushaibi, Alawi and Sumiea, Ebrahim Hamid and Qureshi, Rizwan and Al-Selwi, Safwan Mahmood and Alhussian, Hitham},
+  journal={IEEE Access}, 
+  title={A Comprehensive Systematic Review of YOLO for Medical Object Detection (2018 to 2023)}, 
+  year={2024},
+  volume={12},
+  number={},
+  pages={57815-57836},
+  keywords={YOLO;Real-time systems;Medical services;Feature extraction;Reviews;Artificial intelligence;Deep learning;Object detection;Biomedical imaging;Surgery;YOLO;healthcare applications;artificial intelligence;medical object detection;medical imaging;systematic review},
+  doi={10.1109/ACCESS.2024.3386826}
+}
+
+@misc{yolo11,
+      title={YOLOv11: An Overview of the Key Architectural Enhancements}, 
+      author={Rahima Khanam and Muhammad Hussain},
+      year={2024},
+      eprint={2410.17725},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2410.17725}, 
+}
+
+@INPROCEEDINGS{odmetrics,
+  author={Padilla, Rafael and Netto, Sergio L. and da Silva, Eduardo A. B.},
+  booktitle={2020 International Conference on Systems, Signals and Image Processing (IWSSIP)}, 
+  title={A Survey on Performance Metrics for Object-Detection Algorithms}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={237-242},
+  keywords={Measurement;Object detection;Detectors;Interpolation;Tools;Benchmark testing;Standards;object-detection metrics;average precision;object-detection challenges;bounding boxes},
+  doi={10.1109/IWSSIP48289.2020.9145130}
+  }
