--- a/latex/main.tex
+++ b/latex/main.tex
@@ -54,6 +54,8 @@ Aalen University, Beethovenstr. 1, 73430 Aalen \\
 \section{Introduction} % Cumi
 \subsection{Novelty \& Expected Contributions} % Cumi
 \subsection{Research Gap \& Questions} % Tobi
+This work adresses the tollowing question: \\
+\textbf{CycleGAN-generated chest CT images improve object detection accuracy when real data is limited?}
 % ------------------------------------------------------------
 \section{Related Work}
 \subsection{GANs in Medical Imaging} % Tobi
@@ -72,8 +74,8 @@ The training process consists of two stages: (1) GAN training and (2) object det
 \subsection{Evaluation} % Tobi
 The performance of YOLO11 is evaluated using standard metrics for object detection~\cite{odmetrics}. These include:
 \begin{itemize}
-\item \textbf{Intersection over Union:} Measures the overlap between two regions by dividing the area of their intersection by the area of their union.
-\item \textbf{Average Precision:} Measures the accuracy by calculating the area under the precision-recall curve.
+    \item \textbf{Intersection over Union:} Measures the overlap between two regions by dividing the area of their intersection by the area of their union.
+    \item \textbf{Average Precision:} Measures the accuracy by calculating the area under the precision-recall curve.
 \end{itemize}
 % ------------------------------------------------------------
 \section{Expected Results} % Cumi
