--- a/latex/references.bib
+++ b/latex/references.bib
@@ -104,3 +104,23 @@
   keywords={Measurement;Object detection;Detectors;Interpolation;Tools;Benchmark testing;Standards;object-detection metrics;average precision;object-detection challenges;bounding boxes},
   doi={10.1109/IWSSIP48289.2020.9145130}
   }
+
+@article{albuquerque2025deep,
+  title={Deep learning-based object detection algorithms in medical imaging: Systematic review},
+  author={Albuquerque, Carina and Henriques, Roberto and Castelli, Mauro},
+  journal={Heliyon},
+  volume={11},
+  number={1},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{yang2021artificial,
+  title={Artificial convolutional neural network in object detection and semantic segmentation for medical imaging analysis},
+  author={Yang, Ruixin and Yu, Yingyan},
+  journal={Frontiers in oncology},
+  volume={11},
+  pages={638182},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
