--- a/latex/references.bib
+++ b/latex/references.bib
@@ -124,3 +124,11 @@
   year={2021},
   publisher={Frontiers Media SA}
 }
+
+@inproceedings{goodfellow2014gan,
+  author = {Goodfellow, Ian J. and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  booktitle = {Advances in Neural Information Processing Systems},
+  title = {Generative adversarial Nets},
+  volume = {27},
+  year = {2014}
+}
