Added section 'Expected Results'

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -94,6 +94,7 @@ The performance of YOLO11 is evaluated using standard metrics for object detecti
 \end{itemize}
 % ------------------------------------------------------------
 \section{Expected Results} % Cumi
+We expect that the object detection model trained on the augmented dataset with GAN-generated CT images will achieve noticable improvement in performance compared to training on the original data alone. We also anticipate higher detection accuracy and better generalization because the synthetic images offer greater diversity into the training set. In the end, the results should provide insight into whether GAN-based augmentation is a practical and effective metho for addressing data scarcity in medical imaging.
 %
 % ---- Bibliography ----
 %
