Minor spelling fix

--- a/latex/01-introduction.tex
+++ b/latex/01-introduction.tex
@@ -13,4 +13,4 @@ This paper aims to support the medical sector in data analysis by analyzing how 
 \end{itemize}
 \subsection{Research Question} % Tobi
 This work adresses the tollowing question: \\
-\textbf{CycleGAN-generated chest CT images improve object detection accuracy when real data is limited?}
+\textbf{Do CycleGAN-generated chest CT images improve object detection accuracy when real training data is limited?}
