Added new reference, Corrected few typos, Adjusted 'Object Detection in Medical Imaging' and 'Positioning of this Work'

--- a/latex/02-related-work.tex
+++ b/latex/02-related-work.tex
@@ -2,6 +2,6 @@
 \subsection{GANs in Medical Imaging} % Tobi
 GANs have become an effective tool in medical imaging for image synthesis, segmentation and classification. Frid-Adar et al.~\cite{frid2018gan} demonstrated that GAN-generated synthetic CT images of liver lesions improved classification. Sandfort et al.~\cite{sandfort2019data} utilized CycleGAN to adapt between contrast and non-contrast CT images, improving segmentation performance. Singh and Raza~\cite{singh2021medical} reviewed GAN architectures and emphasized their potential to overcome data scarcity. However, few existing studies, such as the CycleGAN-based augmentation by Hammami et al.\cite{cycleganeaugmentation}, have utilized GANs directly to object detection. Our work builds on these studies by further evaluating the effectiveness of GAN-generated CT images on YOLO-based pulmonary nodule detection.
 \subsection{Object Detection in Medical Imaging} % Tobi
-Deep learning-based approaches have seen widespread use in medical object detection~\cite{albuquerque2025deep}\cite{yang2021artificial}. However, performance is limited due to the low availability of annotated medical images. To overcome this data scarcity, GAN-generated images can be generated to augment scarce datasets.
+Deep learning-based approaches have seen widespread use in medical object detection~\cite{albuquerque2025deep}\cite{yang2021artificial}. However, performance is limited due to the low availability of annotated medical images\cite{covid2022gan}. To overcome this data scarcity, GAN-generated images can be generated to augment scarce datasets.
 \subsection{Positioning of this Work} % Tobi
-While GAN-based data augmentation has proven effective for image classification and segmentation, its impact on object detection is underexplored. This work adresses the gap by applying GAN-generated CT images to augment a medical images dataset and evaluate their effect on object detection performance.
+While GAN-based data augmentation has proven effective for image classification and segmentation, object detection has been explored in only a small number of studies and lacks evaluation. This work addresses the gap by applying GAN-generated CT images to augment a medical images dataset and evaluate their effect on object detection performance.
