--- a/latex/references.bib
+++ b/latex/references.bib
@@ -132,3 +132,20 @@
   volume = {27},
   year = {2014}
 }
+
+@article{covid2022gan,
+author="Ali, Hazrat
+and Shah, Zubair",
+title="Combating COVID-19 Using Generative Adversarial Networks and Artificial Intelligence for Medical Images: Scoping Review",
+journal="JMIR Med Inform",
+year="2022",
+month="Jun",
+day="29",
+volume="10",
+number="6",
+pages="e37365",
+keywords="augmentation; artificial intelligence; COVID-19; diagnosis; generative adversarial networks; diagnostic; lung image; imaging; data augmentation; X-ray; CT scan; data scarcity; image data; neural network; clinical informatics",
+abstract="Background: Research on the diagnosis of COVID-19 using lung images is limited by the scarcity of imaging data. Generative adversarial networks (GANs) are popular for synthesis and data augmentation. GANs have been explored for data augmentation to enhance the performance of artificial intelligence (AI) methods for the diagnosis of COVID-19 within lung computed tomography (CT) and X-ray images. However, the role of GANs in overcoming data scarcity for COVID-19 is not well understood. Objective: This review presents a comprehensive study on the role of GANs in addressing the challenges related to COVID-19 data scarcity and diagnosis. It is the first review that summarizes different GAN methods and lung imaging data sets for COVID-19. It attempts to answer the questions related to applications of GANs, popular GAN architectures, frequently used image modalities, and the availability of source code. Methods: A search was conducted on 5 databases, namely PubMed, IEEEXplore, Association for Computing Machinery (ACM) Digital Library, Scopus, and Google Scholar. The search was conducted from October 11-13, 2021. The search was conducted using intervention keywords, such as ``generative adversarial networks'' and ``GANs,'' and application keywords, such as ``COVID-19'' and ``coronavirus.'' The review was performed following the Preferred Reporting Items for Systematic Reviews and Meta-Analyses Extension for Scoping Reviews (PRISMA-ScR) guidelines for systematic and scoping reviews. Only those studies were included that reported GAN-based methods for analyzing chest X-ray images, chest CT images, and chest ultrasound images. Any studies that used deep learning methods but did not use GANs were excluded. No restrictions were imposed on the country of publication, study design, or outcomes. Only those studies that were in English and were published from 2020 to 2022 were included. No studies before 2020 were included. Results: This review included 57 full-text studies that reported the use of GANs for different applications in COVID-19 lung imaging data. Most of the studies (n=42, 74{\%}) used GANs for data augmentation to enhance the performance of AI techniques for COVID-19 diagnosis. Other popular applications of GANs were segmentation of lungs and superresolution of lung images. The cycleGAN and the conditional GAN were the most commonly used architectures, used in 9 studies each. In addition, 29 (51{\%}) studies used chest X-ray images, while 21 (37{\%}) studies used CT images for the training of GANs. For the majority of the studies (n=47, 82{\%}), the experiments were conducted and results were reported using publicly available data. A secondary evaluation of the results by radiologists/clinicians was reported by only 2 (4{\%}) studies. Conclusions: Studies have shown that GANs have great potential to address the data scarcity challenge for lung images in COVID-19. Data synthesized with GANs have been helpful to improve the training of the convolutional neural network (CNN) models trained for the diagnosis of COVID-19. In addition, GANs have also contributed to enhancing the CNNs' performance through the superresolution of the images and segmentation. This review also identified key limitations of the potential transformation of GAN-based methods in clinical applications. ",
+issn="2291-9694",
+doi="10.2196/37365"
+}
