--- a/latex/01-introduction.tex
+++ b/latex/01-introduction.tex
@@ -12,5 +12,5 @@ This paper aims to support the medical sector in data analysis by analyzing how 
 \item[--] Guidelines for future research on integrating synthetic data into medical AI pipelines.
 \end{itemize}
 \subsection{Research Question} % Tobi
-This work adresses the following question: \\
+This work addresses the following question: \\
 \textbf{Do CycleGAN-generated chest CT images improve pulmonary nodule detection accuracy when real training data is limited?}
