Adjusted 'Training Procedure'

--- a/latex/03-methodology.tex
+++ b/latex/03-methodology.tex
@@ -6,7 +6,7 @@ We utilize a CycleGAN architecture to generate realistic synthetic chest CT imag
 \subsection{Object Detection Model} % Tobi
 For the object detection task, we utilize the YOLO11 architecture, which represents the latest advancement in the YOLO familiy~\cite{yolo11}. YOLO has demonstrated strong capabilities in various medical imaging tasks, making it suitable for this work~\cite{yoloreview}.
 \subsection{Training Procedure} % Tobi
-The training process consists of two stages: (1) GAN training and (2) object detector training. First, the CycleGAN is trained on the LUNA16 dataset to generate synthetic chest CT images. The synthetic images are combined with the original images to create a augmented dataset. Next, YOLO11 is trained in three settings: (1) using only the original LUNA16 dataset, (2) using the augmented dataset and (3) only using GAN-generated CT images. To increase generalizability, additional data augmentation such as rotation, scaling, and noise injection are applied in the training process.
+The training process consists of two stages: (1) GAN training and (2) object detector training. First, the CycleGAN is trained on the LUNA16 dataset to generate synthetic chest CT images. The synthetic images are combined with the original images to create a augmented dataset. Next, YOLO11 is trained in three settings: (1) using only the original LUNA16 dataset, (2) using the augmented dataset consisting of original and GAN-generated images and (3) only using GAN-generated CT images. To increase generalizability, additional data augmentation such as rotation, scaling, and noise injection are applied in the training process.
 \subsection{Evaluation} % Tobi
 The performance of YOLO11 is evaluated using standard metrics for object detection~\cite{odmetrics}. These include:
 \begin{itemize}
