--- a/latex/01-introduction.tex
+++ b/latex/01-introduction.tex
@@ -5,7 +5,7 @@ This paper aims to support the medical sector in data analysis by analyzing how 
 \begin{itemize}
 \item[--] Empirical evaluation of GAN-generated CT images for improving object detection model performance.
 
-\item[--] Quantitative comparison between models trained on original and augmented datasets using standard object detection metrics.
+\item[--] Quantitative comparison between models trained on original, augmented and purely synthetic datasets using standard object detection metrics.
 
 \item[--] Insights into the generalization potential of GAN-based augmentation for limited medical datasets.
 
@@ -13,4 +13,4 @@ This paper aims to support the medical sector in data analysis by analyzing how 
 \end{itemize}
 \subsection{Research Question} % Tobi
 This work addresses the following question: \\
-\textbf{Do CycleGAN-generated chest CT images improve pulmonary nodule detection accuracy when real training data is limited?}
+\textbf{Do CycleGAN-generated chest CT images improve lung nodule detection accuracy when real training data is limited?}
