--- a/latex/main.tex
+++ b/latex/main.tex
@@ -57,7 +57,11 @@ Aalen University, Beethovenstr. 1, 73430 Aalen \\
 % ------------------------------------------------------------
 \input{03-methodology}
 % ------------------------------------------------------------
-\input{04-expected-results}
+\input{04-results}
+% ------------------------------------------------------------
+\input{05-discussion}
+% ------------------------------------------------------------
+\input{06-limitations}
 %
 % ---- Bibliography ----
 %
