--- a/latex/05-discussion.tex
+++ b/latex/05-discussion.tex
@@ -1,2 +1,4 @@
-\section{Preliminary Discussion}
+\section{Discussion}
 The preliminary results contrast with prior findings in medical image classification and segmentation, where GAN-based augmentation often improve performance. One possible explaination is that object detection requires spatial localization, making it more sensitive to geometric inconsistencies in synthesis images. These inconsistencies may negatively impact the learning of drawing accurate bounding boxes and consequently degrade object detection performance.
+\\
+\textbf{TODO: Finish this section.}
