--- a/latex/main.tex
+++ b/latex/main.tex
@@ -10,6 +10,7 @@
 % Other font encondings may result in incorrect characters.
 %
 \usepackage{graphicx}
+\usepackage{float}
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
@@ -41,12 +42,14 @@ Aalen University, Beethovenstr. 1, 73430 Aalen \\
 %
 \maketitle              % typeset the header of the contribution
 %
-% \begin{abstract}
-% The abstract should briefly summarize the contents of the paper in
-% 150--250 words.
+\begin{abstract}
+The limited availability of annotated medical imaging data is a major challenge for deep-learning based object detection. Generative Adversarial Networks have been proposed as a potential solution by generating synthetic images for data augmentation and have shown promising results in medical image classification and segmentation. However, their effectiveness in object detection remains underexplored.
 
-% \keywords{First keyword  \and Second keyword \and Another keyword.}
-% \end{abstract}
+This work investigates the impact of CycleGAN-based data augmentation on pulmonary nodule detection in chest CT images. Experiments are conducted on the LUNA16 dataset using the YOLO11 object detection framework. YOLO11 is trained on real data only is compared to YOLO11 trained on a combination of real and GAN-generated images and purely GAN-generated images. Detection performance is evaluated using Average Precision and Intersection over Union.
+
+Preliminary results show that the inclusion of CycleGAN-generated images does not improve detection performance and leads to slightly reduced localization accuracy. These findings suggest that augmentation strategies effective for classification and segmentation may not transfer to object detection.
+\keywords{Medical Object Detection, Generative Adversarial Networks, CycleGAN, YOLO, Data Augmentation}
+\end{abstract}
 %
 %
 %
@@ -62,6 +65,8 @@ Aalen University, Beethovenstr. 1, 73430 Aalen \\
 \input{05-discussion}
 % ------------------------------------------------------------
 \input{06-limitations}
+% ------------------------------------------------------------
+\input{07-conclusion}
 %
 % ---- Bibliography ----
 %
