--- a/latex/02-related-work.tex
+++ b/latex/02-related-work.tex
@@ -1,7 +1,12 @@
 \section{Related Work}
+This section discusses previous studies related to deep learning-based object detection in medical imaging, and the use of GAN-generated data for medical data augmentation. Limitations of existing approaches are discussed to position the contribution of this work.
 \subsection{GANs in Medical Imaging} % Tobi
-GANs have become an effective tool in medical imaging for image synthesis, segmentation and classification. Frid-Adar et al.~\cite{frid2018gan} demonstrated that GAN-generated synthetic CT images of liver lesions improved classification. Sandfort et al.~\cite{sandfort2019data} utilized CycleGAN to adapt between contrast and non-contrast CT images, improving segmentation performance. Singh and Raza~\cite{singh2021medical} reviewed GAN architectures and emphasized their potential to overcome data scarcity. However, few existing studies, such as the CycleGAN-based augmentation by Hammami et al.\cite{cycleganeaugmentation}, have utilized GANs directly to object detection. Our work builds on these studies by further evaluating the effectiveness of GAN-generated CT images on YOLO-based pulmonary nodule detection.
+GANs have become an effective tool in medical imaging for image synthesis, segmentation and classification. Frid-Adar et al.~\cite{frid2018gan} showed that augmenting liver lesion CT images with GAN-generated samples improved classification accuracy. Singh and Raza~\cite{singh2021medical} reviewed GAN architectures and emphasized their potential to overcome data scarcity. \\
+CycleGAN consists of two generator and discriminator networks, enabling unpaired image-to-image translation~\cite{zhu2020unpairedimagetoimagetranslationusing} and has been utilized by Sandfort et al.~\cite{sandfort2019data} to adapt between contrast and non-contrast CT images, improving segmentation performance.
+However, only a limited number of studies have investigated GAN-based augmentation for object detection. Hammami et al.~\cite{cycleganeaugmentation} applied CycleGAN-generated augmentation to YOLO-based multi-organ detection in CT scans and reported mixed results. These findings suggests that while GAN-based augmentation can improve performance for tasks relying on global features, its effectiveness for spatially sensitive tasks such as object detection remains uncertain.
 \subsection{Object Detection in Medical Imaging} % Tobi
-Deep learning-based approaches have seen widespread use in medical object detection~\cite{albuquerque2025deep}\cite{yang2021artificial}. However, performance is limited due to the low availability of annotated medical images\cite{covid2022gan}. To overcome this data scarcity, GAN-generated images can be generated to augment scarce datasets.
+Deep learning-based approaches have seen widespread use in medical object detection~\cite{albuquerque2025deep}\cite{yang2021artificial}. However, performance is limited due to the low availability of annotated medical images\cite{covid2022gan}. To overcome this data scarcity, GAN-generated images can be generated to augment scarce datasets. \\
+YOLO is a family of object detection models and have shown strong capabilities in various medical imaging tasks, including lesion detection, organ localization, and pulmonary nodule detection~\cite{yoloreview}. However, the evaluation of synthetic data augmentation for YOLO-based pulmonary nodule detection remains largely underexplored.
 \subsection{Positioning of this Work} % Tobi
-While GAN-based data augmentation has proven effective for image classification and segmentation, object detection has been explored in only a small number of studies and lacks evaluation. This work addresses the gap by applying GAN-generated CT images to augment a medical images dataset and evaluate their effect on object detection performance.
+Although GAN-based data augmentation has shown promising results for medical image classification and segmentation, its impact on object detection remains underexplored. Existing studies either focus on different tasks or do not explicitly analyze the effect on synthetic data on object detection. \\
+This work adresses this gap by evaluating CycleGAN-based data augmentation for pulmonary nodule detection in chest CT images using the LUNA16 dataset and the YOLO11 object detection framework. Unlike prior work, we compare three different training settings: training on real data only, training on a combination of real and synthetic data, and training on purely synthetic data. This experimental enables a comprehensive assessment of whether GAN-generated CT images can enhance object detection performance.
