--- a/latex/04-results.tex
+++ b/latex/04-results.tex
@@ -1,20 +1,17 @@
-\section{Preliminary Results} % Cumi
-\subsection{Quantitative Results} % Tobi
-Preliminary evaluation show the following results:
-\begin{itemize} 
-    \item \textbf{Baseline YOLO11 (real data only):} 
-\begin{itemize} 
-    \item AP@0.5: \textbf{0.88}
-    \item AP@0.5:0.95: \textbf{0.503 }
-    \item Mean IoU (True Positives): \textbf{0.727}
-    \end{itemize} 
-\item \textbf{YOLO11 with CycleGAN-augmented data:} 
-\begin{itemize} 
-    \item AP@0.5: \textbf{0.842}
-    \item AP@0.5:0.95: \textbf{0.474}
-    \item Mean IoU (True Positives): \textbf{0.716}
-    \end{itemize} 
-\end{itemize}
-\subsection{Initial Observations}
-The baseline model outperforms the CycleGAN-augmented model across all evaluated metrics. This suggests that CycleGAN-based augmentation does not improve, but may slightly degrade object detection performance in this experimental setting. \\
-\textbf{TODO: Conduct experiments on purely synthetic dataset.}
+\section{Preliminary Results}
+Preliminary evaluation shows the following results:
+\begin{table}[H]
+\centering
+\caption{Performance comparison between baseline YOLO11 and CycleGAN-augmented training}
+\begin{tabular}{lccc}
+\hline
+\textbf{Model} & \textbf{AP@0.5} & \textbf{AP@0.5:0.95} & \textbf{Mean IoU} \\
+\hline
+LUNA16 (Baseline) & 0.88 & 0.503 & 0.727 \\
+LUNA16 (CycleGAN-augmented) & 0.842 & 0.474 & 0.716 \\
+\hline
+\end{tabular}
+\end{table}
+\noindent
+The baseline model outperforms the CycleGAN-augmented model across all evaluated metrics. This suggests that CycleGAN-based augmentation does not improve, and may slightly degrade, object detection performance in this experimental setting. \\
+\textbf{TODO: Conduct experiments on a purely synthetic dataset.}
